working select options

--- a/AppPundits.ParkingApp/app/dashboard/dashboard.html
+++ b/AppPundits.ParkingApp/app/dashboard/dashboard.html
@@ -14,42 +14,11 @@
     <section class="matter">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <ul class="today-datas">
-                        <!--<li class="blightblue">
-                            <div class="pull-left"><i class="fa fa-plane"></i></div>
-                            <div class="datas-text pull-right">
-                                <span class="bold">May 18 - 19, 2015</span> Castle Resort, Neverland
-                            </div>
-                            <div class="clearfix"></div>
-                        </li>
-
-                        <li class="borange">
-                            <div class="pull-left"><i class="fa fa-envelope"></i></div>
-                            <div class="datas-text pull-right">
-                                <span class="bold">{{messageCount}}</span> Messages
-                            </div>
-                            <div class="clearfix"></div>
-                        </li>-->
-
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <!--<div class="col-sm-4">-->
                 <button type="button" class="btn btn-info btn-lg" ng-click="addinfringement()">Add Infringement</button>
-                <!--</div>-->
-                <!--<div class="form-horizontal col-sm-4 col-sm-offset-4">
-                    <div class="form-group has-feedback">
-                        <input type="text" ng-model="searchtext" class="form-control" />
-                        <i class="glyphicon glyphicon-search form-control-feedback"></i>
-                    </div>
-                </div>-->
             </div>
             <div class="row">
-                <!--<div class="col-md-6">-->
                 <div class="widget wviolet">
-                    <div data-cc-widget-header title="Infringement">
+                    <div data-cc-widget-header title="Infringement" allow-collapse="true">
                     </div>
                     <div class="widget-content text-info">
                         <table datatable="ng" class="table table-condensed table-striped">
@@ -79,23 +48,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="widget-foot">
-                        <div class="clearfix"></div>
-                    </div>
                 </div>
-                <!--</div>-->
-                <!--<div class="col-md-6">
-                    <div class="widget wgreen">
-                        <div data-cc-widget-header title="{{vm.news.title}}"
-                             allow-collapse="true"></div>
-                        <div class="widget-content text-center text-info">
-                            <small>{{vm.news.description}}</small>
-                        </div>
-                        <div class="widget-foot">
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                </div>-->
             </div>
         </div>
     </section>
