--- a/AppPundits.ParkingApp/app/settings/cartypes.html
+++ b/AppPundits.ParkingApp/app/settings/cartypes.html
@@ -3,7 +3,7 @@
         <button type="button" class="btn btn-info btn-lg" ng-click="openaddcar()">Add Car Type</button>
     </div>
     <div class="widget wviolet">
-        <div data-cc-widget-header title="Car Types">
+        <div data-cc-widget-header title="Car Types" allow-collapse="true">
         </div>
         <div class="widget-content text-info table-responsive">
             <table class="table table-condensed table-striped">
