--- a/AppPundits.ParkingApp/app/settings/manageparkingbuilding.html
+++ b/AppPundits.ParkingApp/app/settings/manageparkingbuilding.html
@@ -1,4 +1,4 @@
-﻿<form role="form" data-toggle="validator">
+﻿<form role="form" data-toggle="validator" ng-submit="save()">
     <div class="modal-header">
         <button type="button" class="close" ng-click="cancel()">&times;</button>
         <h4 class="modal-title">{{dialogtitle}}</h4>
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
+        <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-default" ng-click="cancel()">Close</button>
     </div>
 </form>
