--- a/AppPundits.ParkingApp/app/settings/parkingbuildings.html
+++ b/AppPundits.ParkingApp/app/settings/parkingbuildings.html
@@ -3,7 +3,7 @@
         <button type="button" class="btn btn-info btn-lg" ng-click="add()">Add Parking Building</button>
     </div>
     <div class="widget wviolet">
-        <div data-cc-widget-header title="Parking Buildings">
+        <div data-cc-widget-header title="Parking Buildings" allow-collapse="true">
         </div>
         <div class="widget-content text-info table-responsive">
             <table class="table table-condensed table-striped">
