--- a/AppPundits.ParkingApp/app/settings/settings.html
+++ b/AppPundits.ParkingApp/app/settings/settings.html
@@ -17,9 +17,11 @@
                 <div class="col-md-4">
                     <div data-ng-include="'/app/settings/cartypes.html'"></div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <div data-ng-include="'/app/settings/parkingbuildings.html'"></div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-4">
                     <div data-ng-include="'/app/settings/offenses.html'"></div>
                 </div>
