--- a/AppsPundits.ParkingWeb/app/admin/manageuser.html
+++ b/AppsPundits.ParkingWeb/app/admin/manageuser.html
@@ -14,13 +14,20 @@
             <input type="text" ng-model="vm.user.Email" class="form-control" id="email" required>
         </div>
         <div class="form-group">
+            <label for="rolecntrl" class="control-label">Role:</label>
+            <select ng-model="vm.user.Role" id="rolecntrl" class="form-control">
+                <option>Parking Warden</option>
+                <option>Admin</option>
+            </select>
+        </div>
+        <div class="form-group">
             <label for="phonenumber" class="control-label">Phone Number:</label>
             <input type="text" ng-model="vm.user.PhoneNumber" class="form-control" id="phonenumber" required>
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
             <label for="password" class="control-label">Password:</label>
             <input type="text" ng-model="vm.user.Password" class="form-control" id="password" required>
-        </div>
+        </div>-->
         <div class="form-group">
             <label for="locked" class="control-label">Locked:</label>
             <input type="checkbox" ng-model="vm.user.Locked" id="locked">
